--- a/assets/jade/index.jade
+++ b/assets/jade/index.jade
@@ -1,9 +1,22 @@
-#hero-section
-#services
-#portafolio
-#about
-	#parte1
-	#parte2
-#amazing-team
-#contact-us
-#pie-pagina
+doctype html
+html(lang="en")
+	head
+		title jade
+		meta(charset="utf-8")
+		meta(name="viewport" content="width=device-width, initial-scale=1")
+		link(rel="stylesheet", href="assets/css/main.css")
+		link(rel="stylesheet", href="assets/css/bootstrap.min.css")
+		link(rel="stylesheet", href="assets/css/._font-awesome.css")
+
+		script(src="js/jquery-1.12.3.min.js")
+  		script(src="js/bootstrap.min.js")
+  	body
+		#hero-section
+		#services
+		#portafolio
+		#about
+			#parte1
+			#parte2
+		#amazing-team
+		#contact-us
+		#pie-pagina
