--- a/assets/jade/index.jade
+++ b/assets/jade/index.jade
@@ -8,8 +8,8 @@ html(lang="en")
 		link(rel="stylesheet", href="assets/css/bootstrap.min.css")
 		link(rel="stylesheet", href="assets/css/._font-awesome.css")
 
-		script(src="js/jquery-1.12.3.min.js")
-  		script(src="js/bootstrap.min.js")
+		script(src="assets/js/jquery-1.12.3.min.js")
+  		script(src="assets/js/bootstrap.min.js")
   	body
 		#hero-section
 		#services
