--- a/assets/jade/index.jade
+++ b/assets/jade/index.jade
@@ -9,8 +9,8 @@ html(lang="en")
 		link(rel="stylesheet", href="assets/css/._font-awesome.css")
 
 		script(src="js/jquery-1.12.3.min.js")
-  		script(src="js/bootstrap.min.js")
-  	body
+		script(src="js/bootstrap.min.js")
+	body
 		#hero-section
 		#services
 		#portafolio
@@ -18,5 +18,7 @@ html(lang="en")
 			#parte1
 			#parte2
 		#amazing-team
+			.container
+				
 		#contact-us
 		#pie-pagina
