container parte ABOUT

--- a/assets/jade/index.jade
+++ b/assets/jade/index.jade
@@ -9,14 +9,19 @@ html(lang="en")
 		link(rel="stylesheet", href="assets/css/._font-awesome.css")
 
 		script(src="assets/js/jquery-1.12.3.min.js")
-  		script(src="assets/js/bootstrap.min.js")
-  	body
+		script(src="assets/js/bootstrap.min.js")
+	body
 		#hero-section
 		#services
 		#portafolio
 		#about
-			#parte1
-			#parte2
+			h1 ABOUT
+			P Lorem
+			.container
+				.row
+					.col-sm-5
+					.col-sm-2
+					.col-sam-5
 		#amazing-team
 		#contact-us
 		#pie-pagina
