--- a/assets/jade/index.jade
+++ b/assets/jade/index.jade
@@ -9,14 +9,15 @@ html(lang="en")
 		link(rel="stylesheet", href="assets/css/._font-awesome.css")
 
 		script(src="assets/js/jquery-1.12.3.min.js")
-  		script(src="assets/js/bootstrap.min.js")
-  	body
+		script(src="assets/js/bootstrap.min.js")
+	body
 		#hero-section
 		#services
 		#portafolio
 		#about
 			#parte1
 			#parte2
+				p ajsdbjsa
 		#amazing-team
 		#contact-us
 		#pie-pagina
