portafolio terminado yehhhhhh

--- a/assets/jade/index.jade
+++ b/assets/jade/index.jade
@@ -8,18 +8,70 @@ html(lang="en")
 		link(rel="stylesheet", href="assets/css/bootstrap.min.css")
 		link(rel="stylesheet", href="assets/css/._font-awesome.css")
 
-<<<<<<< .merge_file_a02864
-		script(src="js/jquery-1.12.3.min.js")
-		script(src="js/bootstrap.min.js")
-	body
-=======
 		script(src="assets/js/jquery-1.12.3.min.js")
-  		script(src="assets/js/bootstrap.min.js")
-  	body
->>>>>>> .merge_file_a02544
+		script(src="assets/js/bootstrap.min.js")
+
+	body
+
 		#hero-section
 		#services
-		#portafolio
+		.fondo-portfolio
+			#portafolio.container.text-center.portafolio
+				h2
+					b PORTFOLIO
+				p  
+					em Lorem ipsum dolor sit amet consectetur,
+				.row
+					.col-sm-6.col-md-4
+						.thumbnail
+							img(src="img/portfolio/roundicons.png") 
+							.caption
+								h5
+									b Round Icons 
+								small
+									em Graphic Desing
+					.col-sm-6.col-md-4
+						.thumbnail
+							img(src="img/portfolio/startup-framework.png") 
+							.caption
+								h5 
+									b Startup Framework 
+								small
+									em Website Desing
+					.col-sm-6.col-md-4
+						.thumbnail
+							img(src="img/portfolio/treehouse.png") 
+							.caption
+								h5 
+									b Treehouse 
+								small
+									em Website Desing
+				.row
+					.col-sm-6.col-md-4
+						.thumbnail
+							img(src="img/portfolio/golden.png") 
+							.caption
+								h5 
+									b Golden 
+								small
+									em Website Desing
+					.col-sm-6.col-md-4
+						.thumbnail
+							img(src="img/portfolio/escape.png") 
+							.caption
+								h5 
+									b Escape 
+								small
+									em Website Desing
+					.col-sm-6.col-md-4
+						.thumbnail
+							img(src="img/portfolio/dreams.png") 
+							.caption
+								h5 
+									b Dreams
+								small
+									em Website Desin
+
 		#about
 			#parte1
 			#parte2
