--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -2,4 +2,16 @@ $color_negro:#333333;
 $color_plomo:#BEBEBE;
 $color_amarillo:#FED136;
 $color_blanco:#fff;
- 
+
+// portfolio
+
+ .fondo-portfolio{
+ 	background-color: #F0F0F0;
+ }
+ .portafolio{
+ 	padding-top:5%;
+ 	padding-bottom:5%;
+ }
+ .fondo-portfolio {
+ 	.thumbnail{padding: 0;}
+ }
