portafolio img con responsi

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -13,5 +13,6 @@ $color_blanco:#fff;
  	padding-bottom:5%;
  }
  .fondo-portfolio {
- 	.thumbnail{padding: 0;}
+ 	.thumbnail{padding: 0;
+ 		img{width:100%}}
  }
