--- a/assets/jade/index.jade
+++ b/assets/jade/index.jade
@@ -6,17 +6,13 @@ html(lang="en")
 		meta(name="viewport" content="width=device-width, initial-scale=1")
 		link(rel="stylesheet", href="assets/css/main.css")
 		link(rel="stylesheet", href="assets/css/bootstrap.min.css")
-		link(rel="stylesheet", href="assets/css/._font-awesome.css")
-
-<<<<<<< .merge_file_a02864
+		link(rel="stylesheet", href="assets/font-awesome/css/font-awesome.css")
 		script(src="js/jquery-1.12.3.min.js")
 		script(src="js/bootstrap.min.js")
 	body
-=======
 		script(src="assets/js/jquery-1.12.3.min.js")
-  		script(src="assets/js/bootstrap.min.js")
-  	body
->>>>>>> .merge_file_a02544
+		script(src="assets/js/bootstrap.min.js")
+	body
 		#hero-section
 		#services
 		#portafolio
@@ -24,7 +20,42 @@ html(lang="en")
 			#parte1
 			#parte2
 		#amazing-team
-			.container
-				
+			.container.fondo-team
+				h2.text-center OUR AMAZING TEAM
+				p.text-center <em>Lorem ipsum dolor sit amet</em>
+				<center>
+				.row.team
+					.col-md-4.icons-team
+						img(src="img/team/1.jpg")
+						h5<strong>Kay Garland</strong>
+						h6 Lead Designer
+						i.fa.fa-twitter
+						i.fa.fa-facebook
+						i.fa.fa-linkedin
+					.col-md-4.icons-team
+						img(src="img/team/2.jpg")
+						h5<strong>Larry Parker</strong>
+						h6 Lead Marketer
+						i.fa.fa-twitter
+						i.fa.fa-facebook
+						i.fa.fa-linkedin
+					.col-md-4.icons-team
+						img(src="img/team/3.jpg")
+						h5<strong>Diana Pertersen</strong>
+						h6 Lead Developer
+						i.fa.fa-twitter
+						i.fa.fa-facebook
+						i.fa.fa-linkedin
+				.row.text-team
+					p.text-center Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore<br>magna sed do eiusmod tempor incididunt ut labore et dolore magna
+				</center>
+			.row.logos
+				<center>
+				img(src="img/logos/envato.jpg")
+				img(src="img/logos/designmodo.jpg")
+				img(src="img/logos/themeforest.jpg")
+				img(src="img/logos/creative-market.jpg")
+				</center>
+
 		#contact-us
 		#pie-pagina
