--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -2,4 +2,36 @@ $color_negro:#333333;
 $color_plomo:#BEBEBE;
 $color_amarillo:#FED136;
 $color_blanco:#fff;
- 
+$color_plomoclaro:#F7F7F7;
+ // inicio our amazing team
+ .fondo-team{
+ 	background-color: $color_plomoclaro;
+ 	padding-top: 55px;
+ 	padding-bottom: 100px;
+ }
+ .team img{
+ 	border-radius: 100%;
+ 	padding: 5px;
+ 	background-color: $color_blanco;
+ 	width: 150px;
+ }
+ .icons-team i{
+ 	padding: 5px;
+ 	position: relative;
+ 	font-size: 15px;
+ 	background-color: $color_negro;
+ 	color: $color_blanco;
+ 	border-radius: 100%;
+ 	margin:0 10px;
+ }
+ .text-team p{
+ 	margin-top: 50px;
+ }
+ .logos{
+ 	margin-top: 30px;
+ 	margin-bottom: 30px;
+ }
+ .logos img{
+ 	margin-right: 15px;
+ }
+ // fin our amazing team
