--- a/assets/jade/index.jade
+++ b/assets/jade/index.jade
@@ -6,13 +6,31 @@ html(lang="en")
 		meta(name="viewport" content="width=device-width, initial-scale=1")
 		link(rel="stylesheet", href="assets/css/main.css")
 		link(rel="stylesheet", href="assets/css/bootstrap.min.css")
-		link(rel="stylesheet", href="assets/css/._font-awesome.css")
+		link(rel="stylesheet", href="assets/font-awesome/css/font-awesome.css")
 
 		script(src="assets/js/jquery-1.12.3.min.js")
-  		script(src="assets/js/bootstrap.min.js")
-  	body
+		script(src="assets/js/bootstrap.min.js")
+	body
 		#hero-section
 		#services
+			.container.services
+				h2.text-center <strong>SERVICES</strong>
+				p.text-center <em>Lorem ipsum dolor sit amet consectetur.</em>
+				<center>
+				.row
+					.col-md-4
+						i.fa.fa-shopping-cart.
+						h5.text-center<strong>E-Commerce</strong>
+						p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+					.col-md-4
+						i.fa.fa-laptop
+						h5.text-center<strong>Responsive Design</strong>
+						p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod					   tempor incididunt ut labore et dolore magna aliqua.
+					.col-md-4
+						i.fa.fa-lock
+						h5.text-center<strong>Web Security</strong>
+						p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+				</center>
 		#portafolio
 		#about
 			#parte1
