--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -2,4 +2,25 @@ $color_negro:#333333;
 $color_plomo:#BEBEBE;
 $color_amarillo:#FED136;
 $color_blanco:#fff;
- 
+$color-texto:#7E7877;
+
+// services
+.services h5{
+	margin-top: 25px;
+}
+.services p{
+	margin-top: 15px;
+	color: $color_texto;
+}
+.services i.fa{
+	border-radius: 100%;
+	padding: 20px;
+	background-color: $color_amarillo;
+	font-size: 50px;
+	color: $color_blanco;
+	margin-top: 40px;
+	width: 95px;
+}
+
+
+
