--- a/assets/jade/index.jade
+++ b/assets/jade/index.jade
@@ -6,17 +6,44 @@ html(lang="en")
 		meta(name="viewport" content="width=device-width, initial-scale=1")
 		link(rel="stylesheet", href="assets/css/main.css")
 		link(rel="stylesheet", href="assets/css/bootstrap.min.css")
-		link(rel="stylesheet", href="assets/css/._font-awesome.css")
+		link(rel="stylesheet", href="assets/font-awesome/css/font-awesome.min.css")
 
 		script(src="js/jquery-1.12.3.min.js")
-  		script(src="js/bootstrap.min.js")
-  	body
-		#hero-section
-		#services
-		#portafolio
-		#about
-			#parte1
-			#parte2
-		#amazing-team
-		#contact-us
-		#pie-pagina
+		script(src="js/bootstrap.min.js")
+	body
+		.contact
+			.container
+				.row
+					.titulo
+						h1 CONTACT US
+						P
+						em Lorem ipsum dolor sit amet consectetur.
+					.columnas
+						.col-md-6
+							input(type="text", placeholder="YOUR NAME", required)
+							input(type="text", placeholder="YOUR EMAIL", required)
+							input(type="text", placeholder="YOUR PHONE", required)
+						.col-md-6
+							textarea(placeholder="YOUR MESSAGE" row="30")
+				.buton 
+					button.btn.btn-default SEND MESSAGE
+		.pie-pagina
+			.container
+				.row
+					.col-md-4
+						p 
+						strong Copyright © Your Website 2014
+					.col-md-4.redes
+						.red 
+							a(href="#")
+								i.fa.fa-twitter
+						.red
+							a(href="#")
+								i.fa.fa-facebook
+						.red
+							a(href="#")
+								i.fa.fa-linkedin
+					.col-md-4.color
+						p 
+						strong Privacy Policy Terms of Use
+
