--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -23,6 +23,7 @@ $color_plomoclaro:#F7F7F7;
  	color: $color_blanco;
  	border-radius: 100%;
  	margin:0 10px;
+ 	width: 25px;
  }
  .text-team p{
  	margin-top: 50px;
