--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 .services h5 {
   margin-top: 25px;
 }
@@ -16,7 +15,8 @@
   color: #fff;
   margin-top: 40px;
   width: 95px;
-=======
+}
+
 .fondo-team {
   background-color: #F7F7F7;
   padding-top: 55px;
@@ -68,5 +68,4 @@
 
 .fondo-portfolio .thumbnail img {
   width: 100%;
->>>>>>> c02074f686d917fe07538cd01159352a5bb01f2d
 }
