--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -43,6 +43,7 @@ $color_plomoclaro:#F7F7F7;
  	border-radius: 100%;
  	margin:0 10px;
  	width: 25px;
+ 	margin-bottom: 5px;
  }
  .text-team p{
  	margin-top: 50px;
