--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -6,6 +6,10 @@ $color-texto:#7E7877;
 $color_plomoclaro:#F7F7F7;
 
 // services
+.services{
+	margin-top: 70px;
+	margin-bottom: 100px;
+}
 .services h5{
 	margin-top: 25px;
 }
