--- a/assets/jade/index.jade
+++ b/assets/jade/index.jade
@@ -8,10 +8,34 @@ html(lang="en")
 		link(rel="stylesheet", href="assets/css/bootstrap.min.css")
 		link(rel="stylesheet", href="assets/css/._font-awesome.css")
 
+		link(href='https://fonts.googleapis.com/css?family=Kaushan+Script', rel='stylesheet', type='text/css')
+
 		script(src="assets/js/jquery-1.12.3.min.js")
-  		script(src="assets/js/bootstrap.min.js")
-  	body
+		script(src="assets/js/bootstrap.min.js")
+		body
 		#hero-section
+			.container
+				.row
+					.col-md-6
+						h3 Start Bootstrap
+					.col-md-6.menu.text-center
+						ul.list-menu.list-unstyle.list-inline
+							li
+								a(href="") SERVICES
+							li
+								a(href="") PORTAFOLIO
+							li
+								a(href="") ABOUT
+							li 
+								a(href="") TEAM
+							li
+								a(href="") CONTACT
+				.row.text-center.header-descripcion
+					.jumbotron
+						h2 Welcome To Our Studio!
+						h1 IT'S NICE TO MEET YOU
+						button 
+							strong TELL ME MORE
 		#services
 		#portafolio
 		#about
