--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -2,4 +2,64 @@ $color_negro:#333333;
 $color_plomo:#BEBEBE;
 $color_amarillo:#FED136;
 $color_blanco:#fff;
- 
+
+// HERO SECTION
+// *{outline: 1px solid red;}
+#hero-section{
+	background-image: url("../../img/header-bg.jpg");
+	background-size: cover;
+	height: 100vh;
+	color: $color_blanco;
+}
+#hero-section h3{
+	color:$color_amarillo;
+	padding: 10px 20px;
+	font-family: 'Kaushan Script', cursive;
+}
+.menu{
+	margin-top: 35px;
+}
+.menu a{
+	color: $color_blanco;
+	padding: 5px 10px;
+}
+.menu a:hover{
+	color: $color_amarillo;
+	text-decoration: none;
+}
+.header-descripcion{
+	.jumbotron{
+	background-color: transparent;
+	margin-top: 200px;
+}
+} 
+.header-descripcion h1{
+	font-size: 60px;
+	margin-bottom: 30px;
+}
+.header-descripcion button{
+	background-color: $color_amarillo;
+	border:$color_amarillo;
+	padding: 10px 20px;
+}
+@media screen and (max-width: 750px){
+	.menu{
+		margin-top: 20px;
+	}
+	.menu li{
+		padding: 0px;
+		font-size: 10px;
+	}
+	.menu a{
+		padding: 5px 0;
+	}
+	.header-descripcion{
+	.jumbotron{
+	margin-top:50px;
+	}
+	} 
+	.header-descripcion h1{
+		font-size: 35px;
+		padding: 0;
+	}
+}
