--- a/assets/jade/index.jade
+++ b/assets/jade/index.jade
@@ -22,10 +22,11 @@ html(lang="en")
 		#services
 		.fondo-portfolio
 			#portafolio.container.text-center.portafolio
-				h2
-					b PORTFOLIO
-				p  
-					em Lorem ipsum dolor sit amet consectetur,
+				.row.row-uno
+					h2
+						b PORTFOLIO
+					p  
+						em Lorem ipsum dolor sit amet consectetur,
 				.row
 					.col-sm-6.col-md-4
 						.thumbnail
@@ -86,7 +87,8 @@ html(lang="en")
 					.col-sm-2
 					.col-sam-5
 		#amazing-team
-			.container.fondo-team
+			.fondo-team
+			.container
 				h2.text-center OUR AMAZING TEAM
 				p.text-center <em>Lorem ipsum dolor sit amet</em>
 				<center>
