--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,7 @@
+body {
+  font-family: "Roboto", sans-serif;
+}
+
 #hero-section {
   background-image: url("../../img/header-bg.jpg");
   background-size: cover;
