--- a/assets/jade/index.jade
+++ b/assets/jade/index.jade
@@ -7,6 +7,7 @@ html(lang="en")
 		link(rel="stylesheet", href="assets/css/main.css")
 		link(rel="stylesheet", href="assets/css/bootstrap.min.css")
 		link(rel="stylesheet", href="assets/font-awesome/css/font-awesome.min.css")
+		link(rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto" type="text/css")
 
 		link(href='https://fonts.googleapis.com/css?family=Kaushan+Script', rel='stylesheet', type='text/css')
 
