--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -4,7 +4,11 @@ $color_amarillo:#FED136;
 $color_blanco:#fff;
 $color-texto:#7E7877;
 $color_plomoclaro:#F7F7F7;
+$fuente:"Roboto", sans-serif;
 
+body{
+	font-family: $fuente;
+}
 // HERO SECTION
 // *{outline: 1px solid red;}
 #hero-section{
