about section end

--- a/assets/jade/index.jade
+++ b/assets/jade/index.jade
@@ -6,9 +6,9 @@ html(lang="en")
 		meta(name="viewport" content="width=device-width, initial-scale=1")
 		link(rel="stylesheet", href="assets/css/main.css")
 		link(rel="stylesheet", href="assets/css/bootstrap.min.css")
-		link(rel="stylesheet", href="assets/css/._font-awesome.css")
-			
-		script(src="assets/js/jquery-1.12.3.min.js")
+		link(rel="stylesheet", href="assets/font-awesome/css/font-awesome.css")
+
+		script(src="assets/js/jquery.js")
 		script(src="assets/js/bootstrap.min.js")
 		
 
@@ -17,13 +17,49 @@ html(lang="en")
 		#services
 		#portafolio
 		#about
-			h1 ABOUT
-			P Lorem
+			h1.text-center ABOUT
+			P.text-center
+				em Lorem ipsum dolor sit amet
+			br
 			.container
+				// PArte2
+				hr.linea-about
 				.row
-					.col-sm-5
-					.col-sm-2
-					.col-sam-5
+					.descr-historia.pull-left.text-right
+						h5 2009 - 2011
+						h5 Our Humble Beginning
+						p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmo tempori ncididunt ut labore et dolore magna aliqua. Ut enim ad minim veniameiusmo temporincididunt ut labore et dolore magna aliqua.
+
+					img.circulo-about.img-about.pull-left(src="img/about/1.jpg")
+				//- hr.linea-about
+				.row
+					.descr-historia.pull-right
+						h5 MARCH 2011
+						h5 An agency is Born
+						p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmo tempori ncididunt ut labore et dolore magna aliqua. Ut enim ad minim veniameiusmo temporincididunt ut labore et dolore magna aliqua.
+
+					img.circulo-about.img-about.pull-right(src="img/about/2.jpg")
+				//- hr.linea-about
+				.row
+					.descr-historia.pull-left.text-right
+						h5 DECEMBER 2012
+						h5 Transition to Full Service
+						p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmo tempori ncididunt ut labore et dolore magna aliqua. Ut enim ad minim veniameiusmo temporincididunt ut labore et dolore magna aliqua.
+
+					img.circulo-about.img-about.pull-left(src="img/about/3.jpg")
+				//- hr.linea-about
+				.row
+					.descr-historia.pull-right
+						h5 JULY 2014
+						h5 Phase two expansion 
+						p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmo tempori ncididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,eiusmo temporincididunt ut labore et dolore magna aliqua.
+					img.circulo-about.img-about.pull-right(src="img/about/4.jpg")
+				//- hr.linea-about
+				.row.text-center
+					img#our-story.circulo-about.img-about(src="img/about/5.png")
+						
+
+					//parte2	
 		#amazing-team
 			.container
 				
