--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -2,4 +2,25 @@ $color_negro:#333333;
 $color_plomo:#BEBEBE;
 $color_amarillo:#FED136;
 $color_blanco:#fff;
+$color_plomoclaro:#F7F7F7;
+
+// pARTE2 - ABOUT
+// *{outline:1px solid red;}
+
+h5{ font-weight:700 !important; }
+#about p{color:$color_plomo;}
+.linea-about{position:absolute;left:50%;z-index:-10 ;width:3px;height:150%;background:$color_plomoclaro;margin:0px auto;}
+.container .row{margin:5%;}
+.circulo-about{border-radius:50%; border:5px solid $color_plomoclaro;}
+.img-about{width:15%;margin-top:2%;}
+.descr-historia{width:42.5%;padding:2% 4%;}
+.texto-historia{width:200px;height:200px;}
+#our-story{background:$color_amarillo;padding:20% auto;}
+
+@media screen and(max-width:750px){
+	.img-about{width:30%;margin-top:4%;}
+	.descr-historia{width:70%; text-align:justify!important;}
+	.linea-about{display:none;}
+}
+// fIN PARTE2 - ABOUT
  
