--- a/assets/jade/index.jade
+++ b/assets/jade/index.jade
@@ -17,20 +17,23 @@ html(lang="en")
 		#hero-section
 			.container
 				.row
-					.col-md-6
+					.col-md-4
 						h3 Start Bootstrap
-					.col-md-6.menu.text-center
-						ul.list-menu.list-unstyle.list-inline
-							li
-								a(href="") SERVICES
-							li
-								a(href="") PORTAFOLIO
-							li
-								a(href="") ABOUT
-							li 
-								a(href="") TEAM
-							li
-								a(href="") CONTACT
+					.col-md-8
+						nav
+							#toogle-menu.fa.fa-bars
+							ul.menu
+								li 
+									a.link-menu(href="") SERVICES
+								li
+									a.link-menu(href="") PORTAFOLIO
+								li
+									a.link-menu(href="") ABOUT
+								li
+									a.link-menu(href="") TEAM
+								li
+									a.link-menu(href="") CONTACT
+									
 				.row.text-center.header-descripcion
 					.jumbotron
 						h2 Welcome To Our Studio!
