--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -19,16 +19,45 @@ $color_plomoclaro:#F7F7F7;
 	font-family: 'Kaushan Script', cursive;
 }
 .menu{
-	margin-top: 35px;
+	padding-left:0;
+	margin-top:0;
+	margin-bottom:0;
+	list-style: none;
+	background:none;
+	display:none;
+	@media screen and(min-width:750px) {
+		display: flex;
+		li{
+			text-align:center;
+			border-right:1px solid rgba(#000, .1);
+		}
+	}
+	li{
+		flex: auto;
+		border-bottom:1px solid rgba(#000,.2);
+		&:last-child{border:none;}
+	}
+	.link-menu{
+		color:#fff;
+		text-decoration: none;
+		line-height: 2;
+		font-size: 1.5em;
+		display: block;
+		&:hover{background:rgba(#74a3db, .5);}
+	}
 }
-.menu a{
-	color: $color_blanco;
-	padding: 5px 10px;
+#toggle-menu{
+	background:#0171c0;
+	line-height:2.5;
+	color:#fff;
+	font-size:2em;
+	padding-left:15em;
+	cursor: pointer;
+	@media screen and(min-width:750px) {
+		display: none;
+	}
 }
-.menu a:hover{
-	color: $color_amarillo;
-	text-decoration: none;
-}
+
 .header-descripcion{
 	.jumbotron{
 	background-color: transparent;
