--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -13,64 +13,87 @@ p {
   color: #fff;
 }
 
-#hero-section h3 {
-  color: #FED136;
-  padding: 10px 20px;
+.navbar-header a {
   font-family: 'Kaushan Script', cursive;
 }
 
-.menu {
-  padding-left: 0;
-  margin-top: 0;
+.navbar-custom {
   margin-bottom: 0;
-  list-style: none;
-  background: none;
-  display: none;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+  text-transform: uppercase;
+  background-color: rgba(51, 51, 51, 0.5);
+  font-family: "Roboto Slab","Helvetica Neue",Helvetica,Arial,sans-serif;
 }
 
-@media screen and (min-width: 750px) {
-  .menu {
-    display: flex;
-  }
-  .menu li {
-    text-align: center;
-    border-right: 1px solid rgba(0, 0, 0, 0.1);
-  }
+.navbar-custom .navbar-toggle {
+  padding: 4px 6px;
+  font-size: 18px;
+  color: #FED136;
 }
 
-.menu li {
-  flex: auto;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+.navbar-custom .navbar-toggle:focus, .navbar-custom .navbar-toggle:active {
+  outline: none;
 }
 
-.menu li:last-child {
-  border: none;
+.navbar-custom .navbar-brand {
+  font-weight: 700;
+  color: #FED136;
+  font-size: 1.2em;
 }
 
-.menu .link-menu {
+.navbar-custom .navbar-brand:focus {
+  outline: none;
+}
+
+.navbar-custom a {
   color: #fff;
-  text-decoration: none;
-  line-height: 2;
-  font-size: 1.5em;
-  display: block;
 }
 
-.menu .link-menu:hover {
-  background: rgba(116, 163, 219, 0.5);
+.navbar-custom .nav li a {
+  -webkit-transition: background .3s ease-in-out;
+  -moz-transition: background .3s ease-in-out;
+  transition: background .3s ease-in-out;
 }
 
-#toggle-menu {
-  background: #0171c0;
-  line-height: 2.5;
-  color: #fff;
-  font-size: 2em;
-  padding-left: 15em;
-  cursor: pointer;
+.navbar-custom .nav li a:hover {
+  color: #FED136;
+  outline: none;
+  background-color: transparent;
 }
 
-@media screen and (min-width: 750px) {
-  #toggle-menu {
-    display: none;
+.navbar-custom .nav li a:focus, .navbar-custom .nav li a:active {
+  outline: none;
+  background-color: #FED136;
+}
+
+.navbar-custom .nav li.active {
+  outline: none;
+}
+
+.navbar-custom .nav li.active a {
+  background-color: rgba(255, 255, 255, 0.3);
+}
+
+.navbar-custom .nav li.active a:hover {
+  color: #FED136;
+}
+
+@media (min-width: 768px) {
+  .navbar-custom {
+    padding: 20px 0;
+    border-bottom: none;
+    letter-spacing: 1px;
+    -webkit-transition: background .5s ease-in-out,padding .5s ease-in-out;
+    -moz-transition: background .5s ease-in-out,padding .5s ease-in-out;
+    transition: background .5s ease-in-out,padding .5s ease-in-out;
+  }
+  .navbar-custom.top-nav-collapse {
+    padding: 0;
+    background: #333333;
+    border-bottom: 1px solid #fed136;
+  }
+  .navbar-custom .navbar-custom {
+    width: 100%;
   }
 }
 
@@ -93,16 +116,6 @@ p {
 @media screen and (max-width: 750px) {
   #hero-section {
     height: 600px;
-  }
-  .menu {
-    margin-top: 20px;
-  }
-  .menu li {
-    padding: 0px;
-    font-size: 10px;
-  }
-  .menu a {
-    padding: 5px 0;
   }
   .header-descripcion .jumbotron {
     margin-top: 50px;
@@ -255,6 +268,12 @@ h5 {
   margin-top: 50px;
 }
 
+@media screen and (max-width: 750px) {
+  .text-team p {
+    padding: 0 40px;
+  }
+}
+
 .logos {
   margin-top: 30px;
   margin-bottom: 30px;
@@ -266,7 +285,7 @@ h5 {
 
 .contact {
   background-color: #333333;
-  padding: 100px 0;
+  padding: 10px 0 100px;
 }
 
 .contact .titulo {
